<resources>
    <string name="app_name">Intents ejemplo</string>
    <string name="main_btnShow">Show</string>
    <string name="main_txtAge">(age)</string>
    <string name="main_lblAge">Age</string>
    <string name="main_txtName">(name)</string>
    <string name="main_lblName">Name</string>
    <string name="main_invalid_age">Edad incorrecta</string>
    <string name="main_invalid_name">Nombre incorrecto</string>
</resources>